--- a/chatlangfrontend/chat.html
+++ b/chatlangfrontend/chat.html
@@ -7,17 +7,16 @@
     <title>ChatLang - Chat</title>
     <link rel="stylesheet" href="chat.css" />
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
     <div class="chat-container">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h3>Users</h3>
-                <div class="theme-switcher">
-                    <input type="checkbox" id="theme-toggle" />
-                    <label for="theme-toggle"><span></span></label>
-                </div>
+                <h3><a href="profile.html" class="header-link">ChatLang</a></h3>
+                <button id="theme-toggle-btn" class="theme-toggle-btn">
+    <i class="fas fa-sun"></i> <i class="fas fa-moon hidden"></i> </button>
                 <button id="logout-btn">Logout</button>
             </div>
             <ul class="user-list" id="user-list">
