--- a/chatlangfrontend/register.html
+++ b/chatlangfrontend/register.html
@@ -27,27 +27,37 @@
         </div>
 
         <div class="input-group">
-          <select id="native-language" required>
-            <option value="" disabled selected>Select Native Language</option>
-            <option value="English">English</option>
-            <option value="Spanish">Spanish</option>
-            <option value="French">French</option>
-            <option value="German">German</option>
-            <option value="Hindi">Hindi</option>
-            <option value="Mandarin">Marathi</option>
-          </select>
-        </div>
-        <div class="input-group">
-          <select id="target-language" required>
-            <option value="" disabled selected>Select Target Language</option>
-            <option value="English">English</option>
-            <option value="Spanish">Spanish</option>
-            <option value="French">French</option>
-            <option value="German">German</option>
-            <option value="Hindi">Hindi</option>
-            <option value="Mandarin">Marathi</option>
-          </select>
-        </div>
+    <select id="native-language" required>
+        <option value="" disabled selected>Select Native Language</option>
+        <option value="English">English</option>
+        <option value="Spanish">Spanish</option>
+        <option value="French">French</option>
+        <option value="German">German</option>
+        <option value="Hindi">Hindi</option>
+        <option value="Mandarin">Mandarin</option>
+        <option value="Portuguese">Portuguese</option>
+        <option value="Russian">Russian</option>
+        <option value="Japanese">Japanese</option>
+        <option value="Arabic">Arabic</option>
+        <option value="Italian">Italian</option>
+    </select>
+</div>
+<div class="input-group">
+    <select id="target-language" required>
+        <option value="" disabled selected>Select Target Language</option>
+        <option value="English">English</option>
+        <option value="Spanish">Spanish</option>
+        <option value="French">French</option>
+        <option value="German">German</option>
+        <option value="Hindi">Hindi</option>
+        <option value="Mandarin">Mandarin</option>
+        <option value="Portuguese">Portuguese</option>
+        <option value="Russian">Russian</option>
+        <option value="Japanese">Japanese</option>
+        <option value="Arabic">Arabic</option>
+        <option value="Italian">Italian</option>
+    </select>
+</div>
         <button type="submit" class="cta-btn">Register</button>
         <p class="switch">
           Already have an account? <a href="login.html">Login</a><br>
