--- a/chatlangfrontend/chat.html
+++ b/chatlangfrontend/chat.html
@@ -14,8 +14,7 @@
     <div class="chat-container">
         <aside class="sidebar">
             <div class="sidebar-header">
-             <h3>  <a href="profile.html" id="username-link" class="header-link">ChatLang</a></h3>
-
+                <h3><a href="profile.html" class="header-link">ChatLang</a></h3>
                 <button id="theme-toggle-btn" class="theme-toggle-btn">
     <i class="fas fa-sun"></i> <i class="fas fa-moon hidden"></i> </button>
                 <button id="logout-btn">Logout</button>
@@ -41,7 +40,7 @@
             </div>
             <form class="message-form" id="message-form">
                 <input type="text" id="message-input" placeholder="Type a message..." autocomplete="off" />
-                <button type="submit">
+                 <button type="submit">
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
                     </svg>
