--- a/chatlangfrontend/chat.html
+++ b/chatlangfrontend/chat.html
@@ -14,7 +14,7 @@
     <div class="chat-container">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h3><a href="profile.html" class="header-link">ChatLang</a></h3>
+               <a href="profile.html" id="username-link" class="header-link">ChatLang</a>
                 <button id="theme-toggle-btn" class="theme-toggle-btn">
     <i class="fas fa-sun"></i> <i class="fas fa-moon hidden"></i> </button>
                 <button id="logout-btn">Logout</button>
